--- a/m2/1b_express-hello/package.json
+++ b/m2/1b_express-hello/package.json
@@ -14,6 +14,7 @@
     "node-dev": "3.1.3"
   },
   "dependencies": {
-    "express": "4.16.2"
+    "express": "4.16.2",
+    "morgan": "1.9.0"
   }
 }
