--- a/m2/4_crud/package.json
+++ b/m2/4_crud/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "errorhandler": "1.5.0",
     "express": "4.16.2",
     "morgan": "1.9.0"
   },
