--- a/m2/blog/package.json
+++ b/m2/blog/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node-dev server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "1.18.2",
     "express": "4.16.2",
-    "morgan": "1.9.0"
+    "morgan": "1.9.0",
+    "node-dev": "3.1.3"
   }
 }
